@@ -1,25 +1,19 @@
 Edit the file url.js and change the settings at the top, being careful not to alter the code itself.
 
+----
+Note: it is no longer necessary to make softlinks (symbolic links) from the OpenSim server's maptile folder to your [google_map]/data/region 
+folder as previously. The JPG files are now acquired directly from the server. However, it is possible to use the old code for earlier 
+versions. Below the settings normally changed by the user, the default setting can be changed back as follows:
+
+filenames = "opensim-from-server" // new default
+filenames = "opensim-from-files" // old setting
+
+This change was necessary because the old files didn't seem to be automatically generated by the server any more and they needed to be 
+manually saved, which is a pain. Perhaps I missed some setting but in any case this method is more automatic and less fiddly, so is far
+easier and much to be preferred. It should work fine for multiple grids too. Essentially you don't have to do anything.
+----
+
 There are several other things you can do to improve how this works with your OpenSim instance.
-
-(1) On a Linux/Unix/Solaris server, try making soft links from your [opensim]/bin/maptiles folder to your [google_map]/data/region 
-folder, substituting the path name for [opensim] and [google_map], wherever these are on your server, and the grid coordinates for 
-[x] and [y]. This will prevent you from having to manually import the maptiles into the folder, with the added bonus that they will 
-be updated automatically. You will need one for each of the regions, and will need to add others each time you add regions. You should 
-ignore any files starting in map-2- or more, as only the map-1- files are on the correct zoom level. Filenames in [opensim]/bin/maptiles 
-that are in the form [UUID].jpg are not local regions on your server, so you should not use these (you must have visited these by 
-hypergrid, if they exist). You should use the syntax:
-
-ln -s [opensim]/bin/maptiles/map-1-[x]-[y]-objects.jpg [google_map]/data/regions/maptiles/map-1-[x]-[y]-objects.jpg
-
-e.g. ln -s /opt/opensim/bin/maptiles/map-1-1000-1000-objects.jpg /var/www/opensim/app/google_map/data/regions/maptiles/map-1-1000-1000-objects.jpg
-
-It would be possible to script this automatically if you parsed the XML output of [google_map]/data/map.php. If you have a great deal of 
-regions, especially if people other than you add them or remove them frequently, this might be desirable - it's otherwise unnecessary.
-
-Note that this will only work if you use the option var <code> filenames = "opensim"; </code> instead of <code> var filenames = "uuid"; 
-</code> or <code> var filenames = "uuid-no-dashes"; </code> in the settings. (Note that the tags <code> and </code> are just used here 
-for clarity and don't appear in the file!)
 
 (2) Use the module Warp3DImageModule rather than MapImageModule. You actually need these settings under [Startup] in OpenSim.ini (as of 
 OpenSim 0.7.3.1) - the quotation marks may or may not be critical. Some may already be set in OpenSimDefaults.ini, which you should NOT 
@@ -51,3 +45,26 @@ The new code in 2014 makes a number of minor improvements as well as the major n
 
 Perhaps you have more than one grid, or you have regions on more than one large public grid like OSGrid, FrancoGrid etc? Now you can put them 
 on your own map, at different map centres, providing that you have the map tiles (256 x 256px) available :-)
+
+----
+
+OLD ADVICE IF USING filenames = "opensim-from-files" AS NOTED ABOVE
+
+On a Linux/Unix/Solaris server, try making soft links from your [opensim]/bin/maptiles folder to your [google_map]/data/region
+folder, substituting the path name for [opensim] and [google_map], wherever these are on your server, and the grid coordinates for
+[x] and [y]. This will prevent you from having to manually import the maptiles into the folder, with the added bonus that they will
+be updated automatically. You will need one for each of the regions, and will need to add others each time you add regions. You should
+ignore any files starting in map-2- or more, as only the map-1- files are on the correct zoom level. Filenames in [opensim]/bin/maptiles
+that are in the form [UUID].jpg are not local regions on your server, so you should not use these (you must have visited these by
+hypergrid, if they exist). You should use the syntax:
+
+ln -s [opensim]/bin/maptiles/map-1-[x]-[y]-objects.jpg [google_map]/data/regions/maptiles/map-1-[x]-[y]-objects.jpg
+
+e.g. ln -s /opt/opensim/bin/maptiles/map-1-1000-1000-objects.jpg /var/www/opensim/app/google_map/data/regions/maptiles/map-1-1000-1000-objects.jpg
+
+It would be possible to script this automatically if you parsed the XML output of [google_map]/data/map.php. If you have a great deal of
+regions, especially if people other than you add them or remove them frequently, this might be desirable - it's otherwise unnecessary.
+
+Note that this will only work if you use the option var <code> filenames = "opensim"; </code> instead of <code> var filenames = "uuid";
+</code> or <code> var filenames = "uuid-no-dashes"; </code> in the settings. (Note that the tags <code> and </code> are just used here
+for clarity and don't appear in the file!)
